src/test/test-models/bad/err-decl-double-params.stan
transformed data {
  real y;
  lijaflj
}
model {
}
